--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -139,15 +139,17 @@ form button {
 }
 #movie-container #rating {
 	background: var(--main-red);
-	flex-grow: 0.2;
+	padding: 0;
+	min-width: 11%;
+
+	flex-grow: 0;
+	flex-shrink: 0;
 	display: flex;
 	/*allows centering*/
 	justify-content: center;
 	/* align horizontal */
 	align-items: center;
 	/* align vertical */
-	padding: 0;
-	min-width: 18%
 }
 #movie-container #rating i {
 	font-size: 20px;
