design works for edit remove confirm

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -429,7 +429,7 @@ design the hidden input node
 #edit-favourite-movies-icon:before{
 
 	font-family: "Font Awesome 5 Free";
-	content: "\f00c";
+	content: "\f304";
 	font-style: normal;
 	font-weight: bold;
 
@@ -443,30 +443,14 @@ design the hidden input node
 }
 
 #edit-favourite-movies-icon.confirm-favourite-movies:before{
-	content: "\f304";
+	content: "\f00c";
+}
+#edit-favourite-movies-icon:hover,
+#edit-favourite-movies-icon:active,
+#edit-favourite-movies-icon:focus{
+	color: grey;
 }
 
-/*#edit-favourite-movies-icon, #confirm-favourite-movies-icon{*/
-/*	font-size: 20px;*/
-/*	margin-left: 8px;*/
-/*	display: inline-block;*/
-
-/*	box-shadow: 0 0 1px rgba(0, 0, 0, 0);*/
-/*	transition-duration: 0.3s;*/
-/*	transition-property: transform;*/
-/*}*/
-/*#edit-favourite-movies-icon:hover,*/
-/*#edit-favourite-movies-icon:focus,*/
-/*#edit-favourite-movies-icon:active,*/
-/*#confirm-favourite-movies-icon:hover,*/
-/*#confirm-favourite-movies-icon:focus,*/
-/*#confirm-favourite-movies-icon:active{*/
-/*	cursor: pointer;*/
-
-/*	transform: scale(1.03);*/
-/*	-moz-transform: scale(1.03);*/
-/*	-ms-transform: scale(1.03);*/
-/*}*/
 
 /*****************************
 	firebaseAuth
@@ -491,19 +475,31 @@ design the hidden input node
 
 }
 
-#favourite-movie-li:focus, #favourite-movie-li:active, #favourite-movie-li:hover {
+#favourite-movie-anchor:focus, #favourite-movie-anchor:active, #favourite-movie-anchor:hover {
 	cursor: pointer;
 	color: var(--main-yellow);
 	transition: color 0.2s ease;
 }
 
 #favourite-movie-li{
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 	text-align: left;
 }
 
-#favourite-movie-li span i {
+#favourite-movie-li .fa-star {
 	color: var(--gold);
+}
+
+#favourite-movie-li .fa-trash{
+	margin-left: 8px;
+	float: right;
+}
+#favourite-movie-li .fa-trash:hover,
+#favourite-movie-li .fa-trash:focus,
+#favourite-movie-li .fa-trash:active{
+	color: black;
+	cursor: pointer;
+	color: grey;
 }
 
 /*testing design, used for static html that is currently commented out*/
@@ -675,6 +671,12 @@ design the hidden input node
 	}
 	.modal-content{
 		height: 90px;
+	}
+	#edit-favourite-movies-icon{
+	font-size: 25px;
+	 }
+	#favourite-movie-li .fa-trash{
+		font-size: 25px;
 	}
 }
 /*https://www.canva.com/colors/color-palette-generator/*/
